link navbar list to associated routes

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link rel="stylesheet" href="http://bootswatch.com/darkly/bootstrap.min.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root class="text-center">Loading...</app-root>
 </body>
 </html>
